Update installEclipse.sh